--- a/ingest/package.json
+++ b/ingest/package.json
@@ -46,6 +46,7 @@
     "deep-equal": "^2.2.1",
     "dotenv": "^16",
     "exponential-backoff": "^3.1.1",
+    "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
     "langchain": "^0.0.102",
     "mongodb": "^5",
