--- a/ingest/package.json
+++ b/ingest/package.json
@@ -46,10 +46,12 @@
     "deep-equal": "^2.2.1",
     "dotenv": "^16",
     "exponential-backoff": "^3.1.1",
+    "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
     "langchain": "^0.0.102",
     "mongodb": "^5",
     "node-fetch": "^2",
+    "yaml": "^2.3.1",
     "yargs": "^17"
   }
 }
