--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -11,19 +11,18 @@
   ],
   "main": "./dist/mongodb-chatbot-ui.umd.js",
   "module": "./dist/mongodb-chatbot-ui.es.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/mongodb-chatbot-ui.es.js",
-      "require": "./dist/mongodb-chatbot-ui.umd.js"
-    },
-    "./styles": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
+      "require": "./dist/mongodb-chatbot-ui.umd.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
     "dev": "vite --config vite.config.component.js --mode development",
-    "build:component": "tsc && vite build --config vite.config.component.js",
+    "build:dts": "tsc --project tsconfig.declarations.json",
+    "build:component": "tsc && vite build --config vite.config.component.js && npm run build:dts",
     "build:static-site:dev": "tsc && vite build --config vite.config.static-site.js --mode development",
     "build:static-site:staging": "tsc && vite build --config vite.config.static-site.js --mode staging",
     "build:static-site:qa": "tsc && vite build --config vite.config.static-site.js --mode qa",
@@ -109,7 +108,7 @@
     "release-it": "^15.11.0",
     "rollup": "^3.26.3",
     "storybook": "^7.0.20",
-    "typescript": "^5.0.2",
+    "typescript": "^5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-libcss": "^1.1.0",
     "vite-plugin-node-polyfills": "^0.9.0"
