--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^5.7.0",
     "openai": "^3.2.1",
     "stream-json": "^1.8.0",
+    "typechat": "^0.0.10",
     "winston": "^3.9.0",
     "zod-error": "^1.5.0"
   },
