--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -39,9 +39,11 @@
     "common-tags": "^1",
     "dotenv": "^16.3.1",
     "exponential-backoff": "^3.1.1",
+    "front-matter": "^4.0.2",
     "mongodb": "^5.6.0",
     "openai": "^3",
     "winston": "^3",
+    "yaml": "^2.3.1",
     "zod": "^3.21.4"
   }
 }
