--- a/chat-server/jest.config.json
+++ b/chat-server/jest.config.json
@@ -1,5 +1,5 @@
 {
   "preset": "ts-jest",
-  "setupFiles": ["<rootDir>/src/jestSetUp.ts"],
+  "setupFilesAfterEnv": ["<rootDir>/src/jestSetUp.ts"],
   "testPathIgnorePatterns": ["<rootDir>/dist"]
 }
