works in editor, but doesn't compile

--- a/chat-server/tsconfig.json
+++ b/chat-server/tsconfig.json
@@ -109,5 +109,5 @@
     "**/testHelpers.ts",
     "jestSetUp.ts"
   ],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "./src/jestSetUp.d.ts"]
 }
