--- a/chat-server/jest.config.json
+++ b/chat-server/jest.config.json
@@ -2,5 +2,8 @@
   "preset": "ts-jest",
   "setupFiles": ["<rootDir>/src/jestEnvSetUp.ts"],
   "setupFilesAfterEnv": ["<rootDir>/src/jestSetUp.ts"],
-  "testPathIgnorePatterns": ["<rootDir>/dist"]
+  "testPathIgnorePatterns": [
+    "<rootDir>/dist",
+    "<rootDir>/src/llmQualitativeTests"
+  ]
 }
