--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "start": "node ./dist/index.js",
     "test": "jest --forceExit",
+    "test:llmQualitative": "jest --config jest.config.llmQualitative.js",
     "release": "release-it"
   },
   "engines": {
