--- a/chat-server/tsconfig.json
+++ b/chat-server/tsconfig.json
@@ -103,5 +103,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/testHelpers.ts"],
-  "include": ["./src/**/*.ts"]
+  "include": [ "./src/**/*.ts"],
 }
