(DOCSP-31106) [DEL] Set up TTL on user conversations

--- a/mongodb-atlas/.env.example
+++ b/mongodb-atlas/.env.example
@@ -1,7 +1,10 @@
 GROUP_ID=<Atlas Project ID>
 CLUSTER_NAME=<Atlas Cluster Name>
 DB_NAME=docs-chatbot-dev
-COLL_NAME=content
+CONVERSATIONS_TTL_SECONDS=31536000
+CONVERSATIONS_COLL_NAME=conversations
+CONTENT_METADATA_COLL_NAME=pages
+EMBEDDED_CONTENT_COLL_NAME=embedded_content
 ATLAS_ADMIN_API_KEY=<API KEY>
 ATLAS_ADMIN_API_SECRET=<API SECRET>
 MONGODB_CONNECTION_URI="<MongoDB Connection URI>" # note: having problems if not wrapped in quotes...not sure why
