(DOCSP-31575): LLM qualitative testing framework (#74)
* start stubbing

* add check response quality func

* works in editor, but doesn't compile

* runs but doesn't look correct in editor

* working in VSCode and compiling

* all working

* working again with separate jest suite

* remove console log

* remove typechat from top lvl

* Add back to tsconfig

* remove await

* Fixes

* add test using framework

* comment out skipped tests to appease linter

--- a/chat-server/tsconfig.json
+++ b/chat-server/tsconfig.json
@@ -102,12 +102,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts",
-    "**/testHelpers.ts",
-    "jestSetUp.ts"
-  ],
-  "include": ["./src/**/*.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/testHelpers.ts"],
+  "include": ["global.d.ts", "./src/**/*.ts"]
 }
