--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "start": "node ./dist/index.js",
     "test": "jest --forceExit",
+    "test:llmQualitative": "jest --config jest.config.llmQualitative.js",
     "release": "release-it"
   },
   "engines": {
@@ -61,7 +62,7 @@
     "prettier": "^2.8.7",
     "release-it": "^15",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   }
