--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "start": "node ./dist/index.js",
     "test": "jest --forceExit",
-    "test:llmQualitative": "jest --config jest.config.llmQualitative.js",
+    "test:llmQualitative": "jest --config jest.config.llmQualitative.js --forceExit",
     "release": "release-it"
   },
   "engines": {
@@ -64,6 +64,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "yaml": "^2.3.1"
   }
 }
