--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -1,9 +1,14 @@
 {
   "name": "mongodb-chatbot-ui",
+  "version": "0.0.0",
   "description": "UI for the MongoDB AI Chatbot",
   "author": "MongoDB, Inc.",
   "license": "Apache-2.0",
-  "version": "0.0.0",
+  "keywords": [],
+  "engines": {
+    "node": ">=18",
+    "npm": ">=8"
+  },
   "type": "module",
   "files": [
     "dist",
