dev center data source remove img and div tags + youtube directive

--- a/ingest/package.json
+++ b/ingest/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7.22.5",
     "@types/deep-equal": "^1.0.1",
+    "@types/html-to-text": "^9.0.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^12",
     "@types/node-fetch": "^2.6.4",
@@ -54,6 +55,7 @@
     "exponential-backoff": "^3.1.1",
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
+    "html-to-text": "^9.0.5",
     "langchain": "^0.0.128",
     "mongodb": "^5",
     "node-fetch": "^2",
