--- a/.drone.yml
+++ b/.drone.yml
@@ -122,7 +122,7 @@ trigger:
     - staging
   paths:
     include:
-      - ingest/**/*
+      - chat-server/**/*
       - chat-core/**/*
       - chat-ui/**/*
   branch:
