--- a/.drone.yml
+++ b/.drone.yml
@@ -91,6 +91,7 @@ steps:
         - LG_ARTIFACTORY_PASSWORD
         - LG_ARTIFACTORY_USERNAME
         - LG_ARTIFACTORY_EMAIL
+        - GIT_COMMIT=$DRONE_COMMIT_SHA
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-staging
         - latest-staging
