--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -28,9 +28,9 @@
     "build": "if [[ \"$ENVIRONMENT\" == \"qa\" ]]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
     "build:dts": "tsc --project tsconfig.declarations.json",
     "build:component": "tsc && vite build --config vite.config.component.js && npm run build:dts",
-    "build:static-site:dev": "export VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit); tsc && vite build --config vite.config.static-site.js --mode development",
-    "build:static-site:staging": "export VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit); tsc && vite build --config vite.config.static-site.js --mode staging",
-    "build:static-site:qa": "export VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit); tsc && vite build --config vite.config.static-site.js --mode qa",
+    "build:static-site:dev": "export VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit); echo \"VITE_GIT_COMMIT :: $VITE_GIT_COMMIT\" && tsc && vite build --config vite.config.static-site.js --mode development",
+    "build:static-site:staging": "export VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit); echo \"VITE_GIT_COMMIT :: $VITE_GIT_COMMIT\" && tsc && vite build --config vite.config.static-site.js --mode staging",
+    "build:static-site:qa": "export VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit); echo \"VITE_GIT_COMMIT :: $VITE_GIT_COMMIT\" && tsc && vite build --config vite.config.static-site.js --mode qa",
     "dev": "export VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit); vite --config vite.config.component.js --mode development",
     "env:get-git-commit": "if [ -z \"$VITE_GIT_COMMIT\" ]; then echo \"$(git rev-parse --short HEAD)\"; else echo \"$VITE_GIT_COMMIT\"; fi",
     "format": "prettier ./src --write",
