only serve staging site if env not prod

--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -9,3 +9,4 @@ OPENAI_CHAT_COMPLETION_MODEL_VERSION=<model_version>
 MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
+NODE_ENV=development
