--- a/chat-server/environments/staging.yml
+++ b/chat-server/environments/staging.yml
@@ -8,6 +8,7 @@ env:
   MONGODB_DATABASE_NAME: docs-chatbot-staging
   VECTOR_SEARCH_INDEX_NAME: default
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
+  NODE_ENV: staging
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-staging
