(DOCSP-31438): Horizontal pod autoscaling (#110)
* draft autoscaling

* make set up HPA on staging/prod

* adjust provisioning

--- a/chat-server/environments/production.yml
+++ b/chat-server/environments/production.yml
@@ -11,7 +11,6 @@ env:
   ALLOWED_ORIGINS: https://mongodb.com,https://www.mongodb.com
   NODE_ENV: production
 
-
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-prod
   OPENAI_ENDPOINT: docs-chatbot-prod
@@ -26,16 +25,32 @@ ingress:
 
 resources:
   limits:
-    memory: 1300Mi
+    memory: 1Gi
+    cpu: 1
   requests:
-    memory: 1100Mi
-# TODO: update this to do the elastic-beanstalky stuff
-# need to define resource requests. see kanopy docs and https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#algorithm-details
-# autoscaling:
-#   minReplicas: 2
-#   maxReplicas: 5
-#   metrics:
-#     - type: Resource
-#       resource:
-#         name: cpu
-#         targetAverageUtilization: 80
+    memory: 500Mi
+    cpu: 500m
+autoscaling:
+  apiVersion: autoscaling/v2
+  minReplicas: 1
+  maxReplicas: 5
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        targetAverageUtilization: 80
+  behavior:
+    scaleUp:
+      stabilizationWindowSeconds: 0 # scaleUp immediately if conditions met
+      policies:
+        # 100% of the currently running replicas may at most be added every 60s
+        - type: Percent
+          value: 100
+          periodSeconds: 60
+    scaleDown:
+      stabilizationWindowSeconds: 60 # to prevent flapping, scale down after 60s
+      policies:
+        # At most 1 pod can be removed every 60s
+        - type: Pods
+          value: 1
+          periodSeconds: 60
