rechunk on chunking version change

--- a/ingest/.env.example
+++ b/ingest/.env.example
@@ -9,5 +9,6 @@ OPENAI_CHAT_COMPLETION_MODEL_VERSION=<model_version>
 MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
+NODE_ENV=development
 # Connection string for DevCenter
 DEVCENTER_CONNECTION_URI="mongodb+srv://<username>:<password>@devhub-cluster.sewho.mongodb.net/?retryWrites=true&w=majority"
