--- a/chat-server/environments/staging.yml
+++ b/chat-server/environments/staging.yml
@@ -8,7 +8,7 @@ env:
   MONGODB_DATABASE_NAME: docs-chatbot-staging
   VECTOR_SEARCH_INDEX_NAME: default
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
-  ALLOWED_ORIGINS: https://knowledge.staging.corp.mongodb.com
+  ALLOWED_ORIGINS: https://knowledge.staging.corp.mongodb.com,https://docs-mongodborg-staging.corp.mongodb.com,https://mongodbcom-cdn.website.staging.corp.mongodb.com,https://docs-mongodb-org-stg.s3.us-east-2.amazonaws.com
   NODE_ENV: staging
 
 envSecrets:
