--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -34,20 +34,21 @@
     }
   },
   "scripts": {
-    "dev": "VITE_GIT_COMMIT=$(git rev-parse --short HEAD) vite --config vite.config.component.js --mode development",
+    "build": "if [[ \"$ENVIRONMENT\" == \"qa\" ]]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
     "build:dts": "tsc --project tsconfig.declarations.json",
     "build:component": "tsc && vite build --config vite.config.component.js && npm run build:dts",
-    "build:static-site:dev": "tsc && VITE_GIT_COMMIT=$(git rev-parse --short HEAD) vite build --config vite.config.static-site.js --mode development",
-    "build:static-site:staging": "tsc && VITE_GIT_COMMIT=$(git rev-parse --short HEAD) vite build --config vite.config.static-site.js --mode staging",
-    "build:static-site:qa": "tsc && VITE_GIT_COMMIT=$(git rev-parse --short HEAD) vite build --config vite.config.static-site.js --mode qa",
-    "preview:static-site:dev": "npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
-    "preview:static-site:staging": "npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
-    "preview:static-site:qa": "npm run build:static-site:qa && vite preview --base ./ --config vite.config.static-site.js",
-    "build": "if [[ \"$ENVIRONMENT\" == \"qa\" ]]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
+    "build:static-site:dev": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode development",
+    "build:static-site:staging": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode staging",
+    "build:static-site:qa": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode qa",
+    "dev": "VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite --config vite.config.component.js --mode development",
+    "env:get-git-commit": "if [ -z \"$VITE_GIT_COMMIT\" ]; then echo \"$(git rev-parse --short HEAD)\"; else echo \"$VITE_GIT_COMMIT\"; fi",
     "format": "prettier ./src --write",
     "format:check": "prettier ./src --check",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --config vite.config.component.js --mode development",
+    "preview:static-site:dev": "npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
+    "preview:static-site:staging": "npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
+    "preview:static-site:qa": "npm run build:static-site:qa && vite preview --base ./ --config vite.config.static-site.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "release": "release-it"
